src/test/deca/context/invalid/fields/field_inherited_then_redeclared_illegal.deca
// Description :
//    Redéclaration illégale d'un champ hérité.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int x;
}

class B extends A {
    int x;
}

{
}

